--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,23 @@
 .env
 .env.backup
 .phpunit.result.cache
+docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+vetur.config.js
+docker-compose.yml
+
+*.map
+
+public/js/app.js
+public/js/vendor.js
+public/js/manifest.js
+public/css/app.css
+
+public/mix-manifest.json
+
+package-lock.json
